calcbasica.output
Terminals unused in grammar

    ALFABETO
    TIPO_LISTA_INT
    TIPO_LISTA_REAL
    ABRE_COLCHETE
    FECHA_COLCHETE
    y


State 11 conflicts: 1 shift/reduce
State 18 conflicts: 1 shift/reduce


Grammar

    0 $accept: programa $end

    1 programa: PROGRAMA VARIAVEL bloco FIM

    2 bloco: INICIO declaracoes comandos

    3 declaracoes: tipo lista_variaveis
    4            | declaracoes tipo lista_variaveis

    5 tipo: TIPO_INTEIRO
    6     | TIPO_REAL
    7     | TIPO_CARACTER

    8 lista_variaveis: ε
    9                | VARIAVEL lista_variaveis_rest

   10 lista_variaveis_rest: ε
   11                     | VIRGULA VARIAVEL lista_variaveis_rest

   12 comandos: comando
   13         | comandos comando

   14 comando: atribuicao
   15        | escrita
   16        | leitura
   17        | condicao
   18        | repeticao

   19 condicao: SE expressao ENTAO comandos FIM_SE

   20 repeticao: ENQUANTO expressao comandos FIM_ENQUANTO

   21 atribuicao: VARIAVEL ATRIBUICAO expressao

   22 escrita: ESCREVA ABRE_PARENTESE lista_argumentos FECHA_PARENTESE
   23        | ESCREVA lista_argumentos

   24 lista_argumentos: expressao
   25                 | CADEIA
   26                 | lista_argumentos VIRGULA expressao

   27 leitura: LEIA ABRE_PARENTESE VARIAVEL FECHA_PARENTESE
   28        | LEIA VARIAVEL

   29 expressao: CONSTANTE_INTEIRA
   30          | CONSTANTE_REAL
   31          | VARIAVEL
   32          | expressao PRODUTO expressao
   33          | expressao DIVISAO expressao
   34          | expressao ADICAO expressao
   35          | expressao SUBTRACAO expressao
   36          | expressao IGUAL expressao
   37          | expressao MAIOR expressao


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    PROGRAMA (258) 1
    SE (259) 19
    ENQUANTO (260) 20
    ENTAO (261) 19
    ESCREVA (262) 22 23
    FIM_SE (263) 19
    FIM_ENQUANTO (264) 20
    FIM (265) 1
    INICIO (266) 2
    LEIA (267) 27 28
    ALFABETO (268)
    ADICAO (269) 34
    ATRIBUICAO (270) 21
    DIVISAO (271) 33
    PRODUTO (272) 32
    SUBTRACAO (273) 35
    IGUAL (274) 36
    MAIOR (275) 37
    TIPO_CARACTER (276) 7
    TIPO_INTEIRO (277) 5
    TIPO_LISTA_INT (278)
    TIPO_LISTA_REAL (279)
    TIPO_REAL (280) 6
    ABRE_PARENTESE (281) 22 27
    FECHA_PARENTESE (282) 22 27
    ABRE_COLCHETE (283)
    FECHA_COLCHETE (284)
    VIRGULA (285) 11 26
    CONSTANTE_INTEIRA (286) 29
    CONSTANTE_REAL (287) 30
    VARIAVEL (288) 1 9 11 21 27 28 31
    CADEIA (289) 25
    y (290)


Nonterminals, with rules where they appear

    $accept (36)
        on left: 0
    programa (37)
        on left: 1
        on right: 0
    bloco (38)
        on left: 2
        on right: 1
    declaracoes (39)
        on left: 3 4
        on right: 2 4
    tipo (40)
        on left: 5 6 7
        on right: 3 4
    lista_variaveis (41)
        on left: 8 9
        on right: 3 4
    lista_variaveis_rest (42)
        on left: 10 11
        on right: 9 11
    comandos (43)
        on left: 12 13
        on right: 2 13 19 20
    comando (44)
        on left: 14 15 16 17 18
        on right: 12 13
    condicao (45)
        on left: 19
        on right: 17
    repeticao (46)
        on left: 20
        on right: 18
    atribuicao (47)
        on left: 21
        on right: 14
    escrita (48)
        on left: 22 23
        on right: 15
    lista_argumentos (49)
        on left: 24 25 26
        on right: 22 23 26
    leitura (50)
        on left: 27 28
        on right: 16
    expressao (51)
        on left: 29 30 31 32 33 34 35 36 37
        on right: 19 20 21 24 26 32 33 34 35 36 37


State 0

    0 $accept: • programa $end

    PROGRAMA  shift, and go to state 1

    programa  go to state 2


State 1

    1 programa: PROGRAMA • VARIAVEL bloco FIM

    VARIAVEL  shift, and go to state 3


State 2

    0 $accept: programa • $end

    $end  shift, and go to state 4


State 3

    1 programa: PROGRAMA VARIAVEL • bloco FIM

    INICIO  shift, and go to state 5

    bloco  go to state 6


State 4

    0 $accept: programa $end •

    $default  accept


State 5

    2 bloco: INICIO • declaracoes comandos

    TIPO_CARACTER  shift, and go to state 7
    TIPO_INTEIRO   shift, and go to state 8
    TIPO_REAL      shift, and go to state 9

    declaracoes  go to state 10
    tipo         go to state 11


State 6

    1 programa: PROGRAMA VARIAVEL bloco • FIM

    FIM  shift, and go to state 12


State 7

    7 tipo: TIPO_CARACTER •

    $default  reduce using rule 7 (tipo)


State 8

    5 tipo: TIPO_INTEIRO •

    $default  reduce using rule 5 (tipo)


State 9

    6 tipo: TIPO_REAL •

    $default  reduce using rule 6 (tipo)


State 10

    2 bloco: INICIO declaracoes • comandos
    4 declaracoes: declaracoes • tipo lista_variaveis

    SE             shift, and go to state 13
    ENQUANTO       shift, and go to state 14
    ESCREVA        shift, and go to state 15
    LEIA           shift, and go to state 16
    TIPO_CARACTER  shift, and go to state 7
    TIPO_INTEIRO   shift, and go to state 8
    TIPO_REAL      shift, and go to state 9
    VARIAVEL       shift, and go to state 17

    tipo        go to state 18
    comandos    go to state 19
    comando     go to state 20
    condicao    go to state 21
    repeticao   go to state 22
    atribuicao  go to state 23
    escrita     go to state 24
    leitura     go to state 25


State 11

    3 declaracoes: tipo • lista_variaveis

    VARIAVEL  shift, and go to state 26

    VARIAVEL  [reduce using rule 8 (lista_variaveis)]
    $default  reduce using rule 8 (lista_variaveis)

    lista_variaveis  go to state 27


State 12

    1 programa: PROGRAMA VARIAVEL bloco FIM •

    $default  reduce using rule 1 (programa)


State 13

   19 condicao: SE • expressao ENTAO comandos FIM_SE

    CONSTANTE_INTEIRA  shift, and go to state 28
    CONSTANTE_REAL     shift, and go to state 29
    VARIAVEL           shift, and go to state 30

    expressao  go to state 31


State 14

   20 repeticao: ENQUANTO • expressao comandos FIM_ENQUANTO

    CONSTANTE_INTEIRA  shift, and go to state 28
    CONSTANTE_REAL     shift, and go to state 29
    VARIAVEL           shift, and go to state 30

    expressao  go to state 32


State 15

   22 escrita: ESCREVA • ABRE_PARENTESE lista_argumentos FECHA_PARENTESE
   23        | ESCREVA • lista_argumentos

    ABRE_PARENTESE     shift, and go to state 33
    CONSTANTE_INTEIRA  shift, and go to state 28
    CONSTANTE_REAL     shift, and go to state 29
    VARIAVEL           shift, and go to state 30
    CADEIA             shift, and go to state 34

    lista_argumentos  go to state 35
    expressao         go to state 36


State 16

   27 leitura: LEIA • ABRE_PARENTESE VARIAVEL FECHA_PARENTESE
   28        | LEIA • VARIAVEL

    ABRE_PARENTESE  shift, and go to state 37
    VARIAVEL        shift, and go to state 38


State 17

   21 atribuicao: VARIAVEL • ATRIBUICAO expressao

    ATRIBUICAO  shift, and go to state 39


State 18

    4 declaracoes: declaracoes tipo • lista_variaveis

    VARIAVEL  shift, and go to state 26

    VARIAVEL  [reduce using rule 8 (lista_variaveis)]
    $default  reduce using rule 8 (lista_variaveis)

    lista_variaveis  go to state 40


State 19

    2 bloco: INICIO declaracoes comandos •
   13 comandos: comandos • comando

    SE        shift, and go to state 13
    ENQUANTO  shift, and go to state 14
    ESCREVA   shift, and go to state 15
    LEIA      shift, and go to state 16
    VARIAVEL  shift, and go to state 17

    $default  reduce using rule 2 (bloco)

    comando     go to state 41
    condicao    go to state 21
    repeticao   go to state 22
    atribuicao  go to state 23
    escrita     go to state 24
    leitura     go to state 25


State 20

   12 comandos: comando •

    $default  reduce using rule 12 (comandos)


State 21

   17 comando: condicao •

    $default  reduce using rule 17 (comando)


State 22

   18 comando: repeticao •

    $default  reduce using rule 18 (comando)


State 23

   14 comando: atribuicao •

    $default  reduce using rule 14 (comando)


State 24

   15 comando: escrita •

    $default  reduce using rule 15 (comando)


State 25

   16 comando: leitura •

    $default  reduce using rule 16 (comando)


State 26

    9 lista_variaveis: VARIAVEL • lista_variaveis_rest

    VIRGULA  shift, and go to state 42

    $default  reduce using rule 10 (lista_variaveis_rest)

    lista_variaveis_rest  go to state 43


State 27

    3 declaracoes: tipo lista_variaveis •

    $default  reduce using rule 3 (declaracoes)


State 28

   29 expressao: CONSTANTE_INTEIRA •

    $default  reduce using rule 29 (expressao)


State 29

   30 expressao: CONSTANTE_REAL •

    $default  reduce using rule 30 (expressao)


State 30

   31 expressao: VARIAVEL •

    $default  reduce using rule 31 (expressao)


State 31

   19 condicao: SE expressao • ENTAO comandos FIM_SE
   32 expressao: expressao • PRODUTO expressao
   33          | expressao • DIVISAO expressao
   34          | expressao • ADICAO expressao
   35          | expressao • SUBTRACAO expressao
   36          | expressao • IGUAL expressao
   37          | expressao • MAIOR expressao

    ENTAO      shift, and go to state 44
    ADICAO     shift, and go to state 45
    DIVISAO    shift, and go to state 46
    PRODUTO    shift, and go to state 47
    SUBTRACAO  shift, and go to state 48
    IGUAL      shift, and go to state 49
    MAIOR      shift, and go to state 50


State 32

   20 repeticao: ENQUANTO expressao • comandos FIM_ENQUANTO
   32 expressao: expressao • PRODUTO expressao
   33          | expressao • DIVISAO expressao
   34          | expressao • ADICAO expressao
   35          | expressao • SUBTRACAO expressao
   36          | expressao • IGUAL expressao
   37          | expressao • MAIOR expressao

    SE         shift, and go to state 13
    ENQUANTO   shift, and go to state 14
    ESCREVA    shift, and go to state 15
    LEIA       shift, and go to state 16
    ADICAO     shift, and go to state 45
    DIVISAO    shift, and go to state 46
    PRODUTO    shift, and go to state 47
    SUBTRACAO  shift, and go to state 48
    IGUAL      shift, and go to state 49
    MAIOR      shift, and go to state 50
    VARIAVEL   shift, and go to state 17

    comandos    go to state 51
    comando     go to state 20
    condicao    go to state 21
    repeticao   go to state 22
    atribuicao  go to state 23
    escrita     go to state 24
    leitura     go to state 25


State 33

   22 escrita: ESCREVA ABRE_PARENTESE • lista_argumentos FECHA_PARENTESE

    CONSTANTE_INTEIRA  shift, and go to state 28
    CONSTANTE_REAL     shift, and go to state 29
    VARIAVEL           shift, and go to state 30
    CADEIA             shift, and go to state 34

    lista_argumentos  go to state 52
    expressao         go to state 36


State 34

   25 lista_argumentos: CADEIA •

    $default  reduce using rule 25 (lista_argumentos)


State 35

   23 escrita: ESCREVA lista_argumentos •
   26 lista_argumentos: lista_argumentos • VIRGULA expressao

    VIRGULA  shift, and go to state 53

    $default  reduce using rule 23 (escrita)


State 36

   24 lista_argumentos: expressao •
   32 expressao: expressao • PRODUTO expressao
   33          | expressao • DIVISAO expressao
   34          | expressao • ADICAO expressao
   35          | expressao • SUBTRACAO expressao
   36          | expressao • IGUAL expressao
   37          | expressao • MAIOR expressao

    ADICAO     shift, and go to state 45
    DIVISAO    shift, and go to state 46
    PRODUTO    shift, and go to state 47
    SUBTRACAO  shift, and go to state 48
    IGUAL      shift, and go to state 49
    MAIOR      shift, and go to state 50

    $default  reduce using rule 24 (lista_argumentos)


State 37

   27 leitura: LEIA ABRE_PARENTESE • VARIAVEL FECHA_PARENTESE

    VARIAVEL  shift, and go to state 54


State 38

   28 leitura: LEIA VARIAVEL •

    $default  reduce using rule 28 (leitura)


State 39

   21 atribuicao: VARIAVEL ATRIBUICAO • expressao

    CONSTANTE_INTEIRA  shift, and go to state 28
    CONSTANTE_REAL     shift, and go to state 29
    VARIAVEL           shift, and go to state 30

    expressao  go to state 55


State 40

    4 declaracoes: declaracoes tipo lista_variaveis •

    $default  reduce using rule 4 (declaracoes)


State 41

   13 comandos: comandos comando •

    $default  reduce using rule 13 (comandos)


State 42

   11 lista_variaveis_rest: VIRGULA • VARIAVEL lista_variaveis_rest

    VARIAVEL  shift, and go to state 56


State 43

    9 lista_variaveis: VARIAVEL lista_variaveis_rest •

    $default  reduce using rule 9 (lista_variaveis)


State 44

   19 condicao: SE expressao ENTAO • comandos FIM_SE

    SE        shift, and go to state 13
    ENQUANTO  shift, and go to state 14
    ESCREVA   shift, and go to state 15
    LEIA      shift, and go to state 16
    VARIAVEL  shift, and go to state 17

    comandos    go to state 57
    comando     go to state 20
    condicao    go to state 21
    repeticao   go to state 22
    atribuicao  go to state 23
    escrita     go to state 24
    leitura     go to state 25


State 45

   34 expressao: expressao ADICAO • expressao

    CONSTANTE_INTEIRA  shift, and go to state 28
    CONSTANTE_REAL     shift, and go to state 29
    VARIAVEL           shift, and go to state 30

    expressao  go to state 58


State 46

   33 expressao: expressao DIVISAO • expressao

    CONSTANTE_INTEIRA  shift, and go to state 28
    CONSTANTE_REAL     shift, and go to state 29
    VARIAVEL           shift, and go to state 30

    expressao  go to state 59


State 47

   32 expressao: expressao PRODUTO • expressao

    CONSTANTE_INTEIRA  shift, and go to state 28
    CONSTANTE_REAL     shift, and go to state 29
    VARIAVEL           shift, and go to state 30

    expressao  go to state 60


State 48

   35 expressao: expressao SUBTRACAO • expressao

    CONSTANTE_INTEIRA  shift, and go to state 28
    CONSTANTE_REAL     shift, and go to state 29
    VARIAVEL           shift, and go to state 30

    expressao  go to state 61


State 49

   36 expressao: expressao IGUAL • expressao

    CONSTANTE_INTEIRA  shift, and go to state 28
    CONSTANTE_REAL     shift, and go to state 29
    VARIAVEL           shift, and go to state 30

    expressao  go to state 62


State 50

   37 expressao: expressao MAIOR • expressao

    CONSTANTE_INTEIRA  shift, and go to state 28
    CONSTANTE_REAL     shift, and go to state 29
    VARIAVEL           shift, and go to state 30

    expressao  go to state 63


State 51

   13 comandos: comandos • comando
   20 repeticao: ENQUANTO expressao comandos • FIM_ENQUANTO

    SE            shift, and go to state 13
    ENQUANTO      shift, and go to state 14
    ESCREVA       shift, and go to state 15
    FIM_ENQUANTO  shift, and go to state 64
    LEIA          shift, and go to state 16
    VARIAVEL      shift, and go to state 17

    comando     go to state 41
    condicao    go to state 21
    repeticao   go to state 22
    atribuicao  go to state 23
    escrita     go to state 24
    leitura     go to state 25


State 52

   22 escrita: ESCREVA ABRE_PARENTESE lista_argumentos • FECHA_PARENTESE
   26 lista_argumentos: lista_argumentos • VIRGULA expressao

    FECHA_PARENTESE  shift, and go to state 65
    VIRGULA          shift, and go to state 53


State 53

   26 lista_argumentos: lista_argumentos VIRGULA • expressao

    CONSTANTE_INTEIRA  shift, and go to state 28
    CONSTANTE_REAL     shift, and go to state 29
    VARIAVEL           shift, and go to state 30

    expressao  go to state 66


State 54

   27 leitura: LEIA ABRE_PARENTESE VARIAVEL • FECHA_PARENTESE

    FECHA_PARENTESE  shift, and go to state 67


State 55

   21 atribuicao: VARIAVEL ATRIBUICAO expressao •
   32 expressao: expressao • PRODUTO expressao
   33          | expressao • DIVISAO expressao
   34          | expressao • ADICAO expressao
   35          | expressao • SUBTRACAO expressao
   36          | expressao • IGUAL expressao
   37          | expressao • MAIOR expressao

    ADICAO     shift, and go to state 45
    DIVISAO    shift, and go to state 46
    PRODUTO    shift, and go to state 47
    SUBTRACAO  shift, and go to state 48
    IGUAL      shift, and go to state 49
    MAIOR      shift, and go to state 50

    $default  reduce using rule 21 (atribuicao)


State 56

   11 lista_variaveis_rest: VIRGULA VARIAVEL • lista_variaveis_rest

    VIRGULA  shift, and go to state 42

    $default  reduce using rule 10 (lista_variaveis_rest)

    lista_variaveis_rest  go to state 68


State 57

   13 comandos: comandos • comando
   19 condicao: SE expressao ENTAO comandos • FIM_SE

    SE        shift, and go to state 13
    ENQUANTO  shift, and go to state 14
    ESCREVA   shift, and go to state 15
    FIM_SE    shift, and go to state 69
    LEIA      shift, and go to state 16
    VARIAVEL  shift, and go to state 17

    comando     go to state 41
    condicao    go to state 21
    repeticao   go to state 22
    atribuicao  go to state 23
    escrita     go to state 24
    leitura     go to state 25


State 58

   32 expressao: expressao • PRODUTO expressao
   33          | expressao • DIVISAO expressao
   34          | expressao • ADICAO expressao
   34          | expressao ADICAO expressao •
   35          | expressao • SUBTRACAO expressao
   36          | expressao • IGUAL expressao
   37          | expressao • MAIOR expressao

    DIVISAO  shift, and go to state 46
    PRODUTO  shift, and go to state 47

    $default  reduce using rule 34 (expressao)


State 59

   32 expressao: expressao • PRODUTO expressao
   33          | expressao • DIVISAO expressao
   33          | expressao DIVISAO expressao •
   34          | expressao • ADICAO expressao
   35          | expressao • SUBTRACAO expressao
   36          | expressao • IGUAL expressao
   37          | expressao • MAIOR expressao

    $default  reduce using rule 33 (expressao)


State 60

   32 expressao: expressao • PRODUTO expressao
   32          | expressao PRODUTO expressao •
   33          | expressao • DIVISAO expressao
   34          | expressao • ADICAO expressao
   35          | expressao • SUBTRACAO expressao
   36          | expressao • IGUAL expressao
   37          | expressao • MAIOR expressao

    $default  reduce using rule 32 (expressao)


State 61

   32 expressao: expressao • PRODUTO expressao
   33          | expressao • DIVISAO expressao
   34          | expressao • ADICAO expressao
   35          | expressao • SUBTRACAO expressao
   35          | expressao SUBTRACAO expressao •
   36          | expressao • IGUAL expressao
   37          | expressao • MAIOR expressao

    DIVISAO  shift, and go to state 46
    PRODUTO  shift, and go to state 47

    $default  reduce using rule 35 (expressao)


State 62

   32 expressao: expressao • PRODUTO expressao
   33          | expressao • DIVISAO expressao
   34          | expressao • ADICAO expressao
   35          | expressao • SUBTRACAO expressao
   36          | expressao • IGUAL expressao
   36          | expressao IGUAL expressao •
   37          | expressao • MAIOR expressao

    ADICAO     shift, and go to state 45
    DIVISAO    shift, and go to state 46
    PRODUTO    shift, and go to state 47
    SUBTRACAO  shift, and go to state 48

    $default  reduce using rule 36 (expressao)


State 63

   32 expressao: expressao • PRODUTO expressao
   33          | expressao • DIVISAO expressao
   34          | expressao • ADICAO expressao
   35          | expressao • SUBTRACAO expressao
   36          | expressao • IGUAL expressao
   37          | expressao • MAIOR expressao
   37          | expressao MAIOR expressao •

    ADICAO     shift, and go to state 45
    DIVISAO    shift, and go to state 46
    PRODUTO    shift, and go to state 47
    SUBTRACAO  shift, and go to state 48

    $default  reduce using rule 37 (expressao)


State 64

   20 repeticao: ENQUANTO expressao comandos FIM_ENQUANTO •

    $default  reduce using rule 20 (repeticao)


State 65

   22 escrita: ESCREVA ABRE_PARENTESE lista_argumentos FECHA_PARENTESE •

    $default  reduce using rule 22 (escrita)


State 66

   26 lista_argumentos: lista_argumentos VIRGULA expressao •
   32 expressao: expressao • PRODUTO expressao
   33          | expressao • DIVISAO expressao
   34          | expressao • ADICAO expressao
   35          | expressao • SUBTRACAO expressao
   36          | expressao • IGUAL expressao
   37          | expressao • MAIOR expressao

    ADICAO     shift, and go to state 45
    DIVISAO    shift, and go to state 46
    PRODUTO    shift, and go to state 47
    SUBTRACAO  shift, and go to state 48
    IGUAL      shift, and go to state 49
    MAIOR      shift, and go to state 50

    $default  reduce using rule 26 (lista_argumentos)


State 67

   27 leitura: LEIA ABRE_PARENTESE VARIAVEL FECHA_PARENTESE •

    $default  reduce using rule 27 (leitura)


State 68

   11 lista_variaveis_rest: VIRGULA VARIAVEL lista_variaveis_rest •

    $default  reduce using rule 11 (lista_variaveis_rest)


State 69

   19 condicao: SE expressao ENTAO comandos FIM_SE •

    $default  reduce using rule 19 (condicao)
